# rquery-orm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: usage.rs
rquery-orm-macros/: Cargo.toml  README.md
rquery-orm-macros/src/: lib.rs  tests.rs
src/: db.rs  lib.rs  mapping.rs  query.rs  repository.rs
src/infrastructure/: generic_repository.rs
src/services/: examples.rs
tests/: it_mssql.rs  it_pg.rs  mssql_setup.sql  pg_setup.sql  unit_entity.rs  unit_query.rs  unit_validation.rs
