[package]
name = "rquery-orm"
version = "0.1.0"
edition = "2021"
authors = ["Luis Carlos Carrillo"]
description = "Lightweight SQL ORM for Rust with query-style (MSSQL + PostgreSQL)."
license = "MIT"
repository = "https://github.com/luigimonsoft/rquery-orm"
documentation = "https://docs.rs/rquery-orm"
readme = "README.md"
keywords = ["orm", "sql", "rust", "query", "database"]
categories = ["database", "asynchronous"]

[dependencies]
anyhow = "1"
thiserror = "2.0.16"
futures = "0.3"
chrono = { version = "0.4", features = ["clock"] }
uuid = "1"
rust_decimal = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
regex = "1"

# SQL Server
tiberius = { version = "0.12.3", default-features = false, features = ["native-tls", "tds73", "chrono", "rust_decimal"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"

# Procedural macros para #[derive(Entity)]
rquery-orm-macros = { path = "./rquery-orm-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
